UCLALIB-225: fixes give now button wrapping on small screens by making user menu two-col at smaller screen size

--- a/www/sites/all/themes/uclalib_omega/css/uclalib-omega.no-query.css
+++ b/www/sites/all/themes/uclalib_omega/css/uclalib-omega.no-query.css
@@ -1874,6 +1874,23 @@ a.more-link,
     margin-right: 0;
   }
 }
+@media only screen and (max-width: 884px) {
+  .logged-in .pane-block.pane-system-user-menu .pane-content ul.menu li {
+    width: 50%;
+    padding: 0;
+  }
+
+  .logged-in .pane-block.pane-system-user-menu .pane-content ul.menu {
+    width: 165px;
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+  }
+
+  .logged-in .l-header .menu li:after {
+    content: "";
+  }
+}
 .pane-horizontal-rule {
   border-bottom: 1px solid #adcde5;
   margin-bottom: 35px;
