--- a/www/sites/all/themes/uclalib_omega/sass/components/_pane-give-now-button.scss
+++ b/www/sites/all/themes/uclalib_omega/sass/components/_pane-give-now-button.scss
@@ -26,3 +26,18 @@
     margin-right: 0;
   }
 }
+  @media only screen and (max-width: 884px) {
+  .logged-in .pane-block.pane-system-user-menu .pane-content ul.menu li {
+    width: 50%;
+    padding: 0;
+  }
+  .logged-in .pane-block.pane-system-user-menu .pane-content ul.menu {
+    width: 165px;
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+  }
+    .logged-in .l-header .menu li:after {
+      content: "";
+    }
+}
